# controletreinamentos

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: promotion-ci.yml  release-strict-gate.yml  repo-hygiene.yml  validation-ci.yml
archive/: MANIFEST.md  README.md
archive/old-wrappers/: README.md  api-cron-backup-20260408-1612.py  api-index-backup-20260408-1612.py  backend-compat-cron-backup-20260408-1613.py  backend-compat-index-backup-20260408-1613.py
archive/repo-snapshots/: README.md
archive/temp-backups/: README.md  smoke_hml_127001_20260422.json  smoke_hml_192168_20260422.json  smoke_prod_127001_20260422.json  smoke_prod_192168_20260422.json
backend/tools/: __init__.py
docs/: README.md
docs/architecture/: ARCHITECTURE.md  DOCUMENT_LAYER_POLICY.md  DOCUMENT_STORAGE_POLICY.md  FILE_ACCESS_POLICY.md  FILE_CLASSIC_RISKS.md  FILE_PERSISTENCE_POLICY.md  FRONTEND_ARCHITECTURE.md  PDF_DOCUMENT_POLICY.md  STORAGE_NAMING_POLICY.md  UPLOAD_POLICY.md
docs/archive/: MANUAL_UNIFICADO.md  MANUAL_UNIFICADO_COMPLETO.md  README.md  repository-reorganization-report.md
docs/governance/: documentation-governance.md  legacy-policy.md  nested-repo-classification.md  removal-backlog.md  repo-topology.md  repository-governance.md  root-entry-policy.md  technical-conventions.md  tmp-classification.md
docs/product/: README.md  (+1 more)
frontend/: README.md
legacy/: LIVE_LEGACY.md  README.md
ops/: README.md
scripts/: README.md
tests/: conftest.py
(+1282 files in other folders)
