[project]
name = "controle-treinamentos"
version = "1.0.0"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend/src/controle_treinamentos --cov-fail-under=40 -q"

[tool.ruff]
target-version = "py39"
line-length = 120
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["backend", "ops"]
